--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,64 @@
-# Model Building Requirements
-numpy==1.16.4
-pandas==1.0.3
-stockstats
-scikit-learn==0.21.0
+absl-py==0.10.0
+astor==0.8.1
+attrs==20.2.0
+backcall==0.2.0
+cloudpickle==1.2.2
+cycler==0.10.0
+decorator==4.4.2
+future==0.18.2
+gast==0.2.2
+google-pasta==0.2.0
+grpcio==1.32.0
 gym==0.15.3
-stable-baselines[mpi]
-tensorflow==1.15.2
-
+h5py==2.10.0
+importlib-metadata==2.0.0
+int-date==0.1.8
+ipykernel==5.3.4
+ipython==7.19.0
+ipython-genutils==0.2.0
+jedi==0.17.2
 joblib==0.15.1
-
-# plot
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+Markdown==3.3.1
 matplotlib==3.2.1
-
-# testing requirements
-pytest>=5.3.2,<6.0.0
-
-# packaging
-setuptools>=41.4.0,<42.0.0
-wheel>=0.33.6,<0.34.0
-
-
-
+more-itertools==8.5.0
+mpi4py==3.0.3
+numpy==1.16.4
+opencv-python==4.4.0.44
+opt-einsum==3.3.0
+packaging==20.4
+pandas==1.0.3
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pluggy==0.13.1
+prompt-toolkit==3.0.8
+protobuf==3.13.0
+ptyprocess==0.6.0
+py==1.9.0
+pyglet==1.3.2
+Pygments==2.7.2
+pyparsing==2.4.7
+pytest==5.4.3
+python-dateutil==2.8.1
+pytz==2020.1
+pyzmq==20.0.0
+scikit-learn==0.21.0
+scipy==1.5.2
+six==1.15.0
+stable-baselines==2.10.1
+stockstats==0.3.1
+tensorboard==1.15.0
+tensorflow==1.15.2
+tensorflow-estimator==1.15.1
+termcolor==1.1.0
+tornado==6.1
+traitlets==5.0.5
+wcwidth==0.2.5
+Werkzeug==1.0.1
+wrapt==1.12.1
+zipp==3.3.0
