switched all constants to central config file

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astor==0.8.1
 attrs==20.2.0
 backcall==0.2.0
 cloudpickle==1.2.2
+ConfigArgParse==1.2.3
 cycler==0.10.0
 decorator==4.4.2
 future==0.18.2
